--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import necessary packages"
+    "import sqlite3\n",
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; create the database school.sqlite"
+    "conn = sqlite3.Connection('school.sqlite')\n",
+    "cur = conn.cursor()"
    ]
   },
   {
@@ -78,15 +80,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table contactinfo already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-9e692f70370a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m                                          \u001b[0mstate\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                          \u001b[0mzipcode\u001b[0m \u001b[0mINTEGER\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                                         )\"\"\")\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: table contactinfo already exists"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here\n",
+    "cur.execute(\"\"\"CREATE TABLE contactinfo (\n",
+    "                                         firstname TEXT PRIMARY KEY,\n",
+    "                                         lastname TEXT,\n",
+    "                                         role TEXT,\n",
+    "                                         email TEXT,\n",
+    "                                         telephone INTEGER,\n",
+    "                                         street TEXT,\n",
+    "                                         city TEXT,\n",
+    "                                         state TEXT,\n",
+    "                                         zipcode INTEGER\n",
+    "                                        )\"\"\")\n",
     "import pickle\n",
     "\n",
     "with open('contact_list.pickle', 'rb') as f:\n",
     "    contacts = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'firstName': 'Christine',\n",
+       "  'lastName': 'Holden',\n",
+       "  'role': 'staff',\n",
+       "  'telephone ': 2035687697,\n",
+       "  'street': '1672 Whitman Court',\n",
+       "  'city': 'Stamford',\n",
+       "  'state': 'CT',\n",
+       "  'zipcode ': '06995'},\n",
+       " {'firstName': 'Christopher',\n",
+       "  'lastName': 'Warren',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 2175150957,\n",
+       "  'street': '1935 University Hill Road',\n",
+       "  'city': 'Champaign',\n",
+       "  'state': 'IL',\n",
+       "  'zipcode ': '61938'},\n",
+       " {'firstName': 'Linda',\n",
+       "  'lastName': 'Jacobson',\n",
+       "  'role': 'staff',\n",
+       "  'telephone ': 4049446441,\n",
+       "  'street': '479 Musgrave Street',\n",
+       "  'city': 'Atlanta',\n",
+       "  'state': 'GA',\n",
+       "  'zipcode ': '30303'},\n",
+       " {'firstName': 'Andrew',\n",
+       "  'lastName': 'Stepp',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 7866419252,\n",
+       "  'street': '2981 Lamberts Branch Road',\n",
+       "  'city': 'Hialeah',\n",
+       "  'state': 'Fl',\n",
+       "  'zipcode ': '33012'},\n",
+       " {'firstName': 'Jane',\n",
+       "  'lastName': 'Evans',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 3259909290,\n",
+       "  'street': '1461 Briarhill Lane',\n",
+       "  'city': 'Abilene',\n",
+       "  'state': 'TX',\n",
+       "  'zipcode ': '79602'},\n",
+       " {'firstName': 'Jane',\n",
+       "  'lastName': 'Evans',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 3259909290,\n",
+       "  'street': '1461 Briarhill Lane',\n",
+       "  'city': 'Abilene',\n",
+       "  'state': 'TX',\n",
+       "  'zipcode ': '79602'},\n",
+       " {'firstName': 'Mary',\n",
+       "  'lastName': 'Raines',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 9075772295,\n",
+       "  'street': '3975 Jerry Toth Drive',\n",
+       "  'city': 'Ninilchik',\n",
+       "  'state': 'AK',\n",
+       "  'zipcode ': '99639'},\n",
+       " {'firstName': 'Ed',\n",
+       "  'lastName': 'Lyman',\n",
+       "  'role': 'student',\n",
+       "  'telephone ': 5179695576,\n",
+       "  'street': '3478 Be Sreet',\n",
+       "  'city': 'Lansing',\n",
+       "  'state': 'MI',\n",
+       "  'zipcode ': '48933'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contacts"
    ]
   },
   {
@@ -104,7 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to load the list of dictionaries; just run this cell"
+    "# Code to load the list of dictionaries; just run this cell\n",
+    "cur.execute(\"\"\"INSERT INTO contactinfo\"\"\")"
    ]
   },
   {
@@ -280,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
